unpackaged/objects/ContentVersion.object
<CustomObject>
  <fields>
    <fullName>BU_Dental_Contact__c</fullName>
    <description>Who to contact when you have questions about a material</description>
    <label>BU Dental Contact</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Head of Market Communication</fullName>
        </value>
        <value>
          <fullName>Head of Product &amp; Therapy Management</fullName>
        </value>
        <value>
          <fullName>Head of Scientific Management</fullName>
        </value>
        <value>
          <fullName>Head of Training &amp; Education</fullName>
        </value>
        <value>
          <fullName>Head of International Congresses</fullName>
        </value>
        <value>
          <fullName>Market Company AT</fullName>
        </value>
        <value>
          <fullName>Market Company AU</fullName>
        </value>
        <value>
          <fullName>Market Company BeNeLux</fullName>
        </value>
        <value>
          <fullName>Market Company CA</fullName>
        </value>
        <value>
          <fullName>Market Company CH</fullName>
        </value>
        <value>
          <fullName>Market Company DE</fullName>
        </value>
        <value>
          <fullName>Market Company DK</fullName>
        </value>
        <value>
          <fullName>Market Company DEX</fullName>
        </value>
        <value>
          <fullName>Market Company ES</fullName>
        </value>
        <value>
          <fullName>Market Company FI</fullName>
        </value>
        <value>
          <fullName>Market Company FR</fullName>
        </value>
        <value>
          <fullName>Market Company IT</fullName>
        </value>
        <value>
          <fullName>Market Company NO</fullName>
        </value>
        <value>
          <fullName>Market Company PL</fullName>
        </value>
        <value>
          <fullName>Market Company UK</fullName>
        </value>
        <value>
          <fullName>Market Company US</fullName>
        </value>
        <value>
          <fullName>Market Company SE</fullName>
        </value>
        <value>
          <fullName>Market Company AT Nordic</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Type_of_Material__c</fullName>
    <label>Type of Material</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>SP Sales Presentation</fullName>
        </value>
        <value>
          <fullName>AB Abstract</fullName>
        </value>
        <value>
          <fullName>RP Reprint</fullName>
        </value>
        <value>
          <fullName>SR Scientific Review</fullName>
        </value>
        <value>
          <fullName>GU Guideline</fullName>
        </value>
        <value>
          <fullName>MA Manual</fullName>
        </value>
        <value>
          <fullName>AD Advertisement</fullName>
        </value>
        <value>
          <fullName>BO Book</fullName>
        </value>
        <value>
          <fullName>BR Brochure</fullName>
        </value>
        <value>
          <fullName>FO Folder</fullName>
        </value>
        <value>
          <fullName>LF Leaflet</fullName>
        </value>
        <value>
          <fullName>MAG Magazine</fullName>
        </value>
        <value>
          <fullName>PC Postcard</fullName>
        </value>
        <value>
          <fullName>PO Poster</fullName>
        </value>
        <value>
          <fullName>OT Other</fullName>
        </value>
        <value>
          <fullName>DP Digital Presentation</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Type_of_Use__c</fullName>
    <label>Type of Use</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>For EXTERNAL use</fullName>
        </value>
        <value>
          <fullName>For INTERNAL use</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <recordTypes>
    <active>true</active>
    <fullName>Brochures</fullName>
    <label>Brochures</label>
  </recordTypes>
</CustomObject>